# drum-machine

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  clean_build.sh  drum_machine_plan.md
.github/workflows/: cmake-multi-platform.yml
config/: drum_config.json
cpp/: CircularMembrane.cpp  CircularMembrane.h
dependencies/glad/: glad.h
include/: CircularMembrane.hpp  JsonParser.hpp  RectangularMembrane.h  RectangularMembrane.hpp  audioDSP.hpp  audioDefs.h  audioDefs.hpp  audioEngine.h  audioEngine.hpp  drumRenderer.h  drumRenderer.hpp  renderer.hpp  simDefs.h  simDefs.hpp  strikeDefs.hpp
modelling/octave/: testAudio.m
modelling/python/3Dmodelling/: Membrane.ipynb  circularMembranModelling.ipynb
python/3Dmodelling/: circularMembranModelling.ipynb
src/: CircularMembrane.cpp  RectangularMembrane.cc  audioEngine.cc  audioEngine.cpp  drumRenderer.cpp  glad.c  main.cc  renderer.cc
src/backend/: CircularMembrane.cc  RectangularMembrane.cc  audioEngine.cc
src/backend/audio/dsp/: audioDSP.cc
src/backend/audio/engine/: audioEngine.cc
src/backend/physics/head/: CircularMembrane.cc  RectangularMembrane.cc
src/frontend/: default.frag  drumRenderer.cc  shaderClass.cpp
test/: Makefile  rectangularMembraneUnitTest.cc
